--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -90,11 +90,11 @@ button:hover {
 }
 
 /* Styling for the <pre> tag within the message column */
-.log-group {
+.log-pre\.log-group {
 	font-weight: bold;
 }
 
-.log-error {
+.log-pre\.log-error {
 	color: red;
 	background-color: #fcebeb;
 	font-weight: bold;
@@ -102,7 +102,7 @@ button:hover {
 	align-items: center;
 }
 
-.log-warn {
+.log-pre\.log-warn {
 	background-color: #fef6d5;
 	font-weight: bold;
 	display: flex;
@@ -111,14 +111,14 @@ button:hover {
 
 /* Styling for the warning icon */
 
-.log-error::before {
+.log-pre\.log-error::before {
 	content: '⛔';
 	margin-right: 8px;
 	font-size: 1.2em;
 	transform: translateY(-2px);
 }
 
-.log-warn::before {
+.log-pre\.log-warn::before {
 	content: '⚠️';
 	margin-right: 8px;
 	font-size: 1.2em;
