code clean up / optimization

--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -193,6 +193,7 @@ span {
 }
 
 .highlight-complete .icon,
+.highlight-repeat .icon,
 .highlight-rejected .icon,
 .highlight-aborted .icon {
 	display: none;
