--- a/src/html/styles.css
+++ b/src/html/styles.css
@@ -13,25 +13,46 @@ code {
 	background-color: #f0f0f0;
 	padding: 10px;
 	border: 1px solid #ccc;
+	height: -webkit-calc(100% - 22px);
+	height: -moz-calc(100% - 22px);
 	height: calc(100% - 22px);
 	overflow-y: auto;
 	font-family: monospace;
 }
 
 .button-container {
-	align-content: flex-start;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	gap: 2px;
 	position: absolute;
 	right: 20px;
 	top: 20px;
 	width: 150px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-webkit-flex-wrap: nowrap;
+	-ms-flex-wrap: nowrap;
+	flex-wrap: nowrap;
+	-webkit-align-content: flex-start;
+	-ms-flex-line-pack: start;
+	align-content: flex-start;
+}
+
+.button-container > * {
+	margin-bottom: 2px;
+}
+
+.button-container > *:last-child {
+	margin-bottom: 0;
 }
 
 .btn-wrapper {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -41,7 +62,11 @@ code {
 	margin-right: 10px;
 	cursor: pointer;
 	color: grey;
+	-webkit-transition: color 0.3s ease;
+	-moz-transition: color 0.3s ease;
 	transition: color 0.3s ease;
+	-webkit-transform: translateX(119px);
+	-moz-transform: translateX(119px);
 	transform: translateX(119px);
 }
 
@@ -57,6 +82,8 @@ button {
 	background-color: #007bff;
 	color: white;
 	border: none;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	border-radius: 5px;
 	text-align: left;
 	width: 200px;
@@ -68,6 +95,8 @@ button:hover {
 
 /* Styling for the log entries */
 .log-entry {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 }
 
@@ -80,6 +109,8 @@ button:hover {
 
 /* Styling for the message column */
 .log-message {
+	-webkit-box-flex: 1;
+	-ms-flex: 1;
 	flex: 1;
 	margin-left: 10px;
 }
@@ -90,7 +121,6 @@ button:hover {
 	font-size: 16px; /* Allows multiline handling */
 }
 
-/* Styling for the <pre> tag within the message column */
 .log-group {
 	font-weight: bold;
 }
@@ -99,14 +129,22 @@ button:hover {
 	color: red;
 	background-color: #fcebeb;
 	font-weight: bold;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
 .log-warn {
 	background-color: #fef6d5;
 	font-weight: bold;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-align-items: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -116,6 +154,8 @@ button:hover {
 	content: '⛔';
 	margin-right: 8px;
 	font-size: 1.2em;
+	-webkit-transform: translateY(-2px);
+	-moz-transform: translateY(-2px);
 	transform: translateY(-2px);
 }
 
@@ -123,6 +163,8 @@ button:hover {
 	content: '⚠️';
 	margin-right: 8px;
 	font-size: 1.2em;
+	-webkit-transform: translateY(-2px);
+	-moz-transform: translateY(-2px);
 	transform: translateY(-2px);
 }
 
